--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 </head>
 <body>
 <div id="card">
-   <div id="top-section">
+  <div id="top-section">
     <h2>Join our community</h2>
     <h4>30-day, hassle-free money back guarantee</h4>
-    <p>Gain access to our full library of tutorials along with expert code reviews.
-    <p>Perfect for any developers who are serious about honing their skills.</p>
+    <p>Gain access to our full library of tutorials along with expert code reviews. <br> Perfect for any developers who are serious about honing their skills.
     </p>
   </div>
 
@@ -29,7 +28,6 @@
       <p>Full access for less than $1 a day</p>
       <button>Sign Up</button>
     </div>
-
     <div id="bottom-right">
       <h4>Why Us</h4>
       <ul>
@@ -47,10 +45,10 @@
 </div>
 
 <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Code by <a href="https://twitter.com/marvelene_dev">Marvelene</a>.
-    </p>
-  </footer>
+  <p class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Code by <a href="https://twitter.com/marvelene_dev">Marvelene</a>.
+  </p>
+</footer>
 </body>
 </html>
